# ace-experiment-framework

./: .gitignore  GETTING_STARTED.md  MANIFEST.md  PHASE_1_COMPLETE.md  PHASE_2_GUIDE.md  PHASE_2_IMPLEMENTATION.md  PHASE_2_SUMMARY.md  README.md  demo_run_experiment.py  pyproject.toml  run_full_program.py  run_phase2_experiments.py
agents/: __init__.py
baselines/: baseline_gpu_transformer_bf16_v1.hash  baseline_gpu_transformer_bf16_v1.json  baseline_gpu_transformer_bf16_v1.yaml
docs/: PROJECT_CLOSEOUT.md  RESEARCH_PAPER_TOKEN_PRUNING_BOUNDARY_ANALYSIS.md  VALIDATED_RESULTS.md  telemetry_variance_protocol.md
reports/: exp_001_bf16_baseline_freeze_report.md  exp_001_int4_quantization_report.md  exp_002_int8_static_quant_sweep_report.md  exp_002_token_pruning_report.md  exp_003_int4_static_quant_sweep_report.md  exp_003_memory_optimization_report.md  exp_004_compiler_fusion_report.md  exp_004_per_layer_mixed_precision_search_report.md  exp_005_activation_quant_sweep_report.md  exp_006_token_pruning_threshold_sweep_report.md  exp_007_sparse_activation_routing_report.md  exp_008_kernel_fusion_loop_report.md  exp_009_memory_layout_cache_policy_report.md  exp_010_retrieval_vs_recompute_report.md  exp_011_rns_emulator_report.md  exp_012_rns_modulus_search_report.md  exp_013_lns_kernel_comparison_report.md  exp_014_posit_simulation_report.md  exp_015_ternary_representation_report.md  exp_016_heterogeneous_boundary_search_report.md  exp_017_async_execution_emulator_report.md  exp_018_fpga_resource_mapping_report.md  exp_019_analog_mac_noise_sweep_report.md  (+28 more)
src/: model.py  (+11 more)
(+122 files in other folders)
